--- a/checkin/templates/checkin/list.html
+++ b/checkin/templates/checkin/list.html
@@ -5,8 +5,8 @@
 
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'css/checkin.css' %}">
-    <script src="{% static 'lib/instascan.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/checkin.js' %}"></script>
+    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/scanner.js' %}"></script>
 {% endblock %}
 
 {% block head_title %}Check-in{% endblock %}
