--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -309,7 +309,8 @@ img {
     width: 100%;
     height: 100%;
     z-index: 1250;
-
+    background-color:rgba(30,30,30,0.9);
+    backdrop-filter: blur(2px);
     cursor: pointer;
 }
 
