--- a/baggage/templates/baggage_users.html
+++ b/baggage/templates/baggage_users.html
@@ -5,9 +5,10 @@
 
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'css/baggage.css' %}">
-    <script type="text/javascript" src="{% static 'js/baggage.js' %}"></script>
     <script src="{% static 'lib/typeahead.min.js' %}"></script>
     <script src="{% static 'js/form_modifiers.js' %}"></script>
+    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/scanner.js' %}"></script>
 {% endblock %}
 
 {% block head_title %}Baggage check-in{% endblock %}
