--- a/checkin/templates/include/input.html
+++ b/checkin/templates/include/input.html
@@ -10,56 +10,44 @@
       </div>
     </div>
     <div id="popup-scan" style="display: none;">
-      <video muted playsinline id="qr-video"></video>
-      <!-- <p style="display: block; margin-top: 10px; font-size: 16px; text-align: center;"><span id="{{ id }}-timestamp"></span></p> -->
+      <label class="control-label" for="qr-camara-select" > Select Camera</label>
+      <select id="qr-camara-select" class="form-control">
+        <option value="null">---</option>
+      </select>
+      <video id="qr-video" style="margin-top: 10px; width: 100%; border-radius: 5px"></video>
+      <button id="qr-close-button" class="btn btn-block btn-info">Close</button>
     </div>
-
-    <script type="module">
-        import QrScanner from '/static/lib/qr-scanner.min.js';
-        QrScanner.WORKER_PATH = '/static/lib/qr-scanner-worker.min.js';
-
-        // Video stream
-        const video = document.getElementById('qr-video');
-
-        // Result elements and set function
-        const camQrResult = document.getElementById('{{ id }}');
-        // const camQrResultTimestamp = document.getElementById('{{ id }}-timestamp');
-        function setResult(result) {
-            camQrResult.value = result;
-            hideQR();
-            /* camQrResultTimestamp.textContent = "Last retrieved on " + new Date().toLocaleTimeString();
-            camQrResultTimestamp.style.color = "#449d44";
-            camQrResultTimestamp.style.fontWeight = "700";
-            camQrResultTimestamp.style.fontSize = "18px";
-            setTimeout(function(){
-              camQrResultTimestamp.style.color = "";
-              camQrResultTimestamp.style.fontWeight = "";
-            camQrResultTimestamp.style.fontSize = "16px";
-            }, 2000); */
-        }
-
-        // Scan
-        const scanner = new QrScanner(video, result => setResult(result));
-
-        $("#{{ id }}-qr").click(function () {
-            let veil = document.createElement("div");
-            document.body.appendChild(veil);
-            veil.classList.add('veil');
-            veil.id = 'veil';
-            $("#popup-scan").show();
-            document.getElementById("veil").addEventListener("click", function(){
-                hideQR();
+    <script>
+        document.addEventListener("DOMContentLoaded", ()=>{
+            function stop() {
+              $('#popup-scan').hide();
+              $('#veil').hide();
+              scanner.stop()
+            }
+            $(document).on('keyup', function(e) {
+              if (e.key === "Escape") stop()
             });
-          scanner.start();
-        });
+            const div = document.createElement('div')
+            div.style = 'display: none;'
+            div.className = 'veil'
+            div.id = 'veil'
+            div.onclick = stop
 
-        function hideQR() {
-            $("#popup-scan").hide();
-            var el = document.getElementById("veil");
-            el.parentNode.removeChild(el);
-            scanner.stop();
-            document.getElementById("checkin-search").submit();
-        }
+            document.body.appendChild(div)
+
+            let scanner = new Scanner('qr-video', 'qr-camara-select', (content) => {
+              $('#{{ id }}').val(content.toString())
+              $('#{{ id }}').closest("form").submit();
+            })
+            let qrButton = document.getElementById("{{ id }}-qr");
+            qrButton.onclick = function () {
+              $('#popup-scan').show();
+              $('#veil').show();
+              scanner.start()
+            }
+            let closeButton = document.getElementById("qr-close-button");
+            closeButton.onclick = stop
+        })
     </script>
   {% else %}
     <input class="form-control" id="{{ id }}" name="{{ name }}" type="text">
