--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-    
+
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 
 {% endblock %}
@@ -22,14 +22,14 @@
 </style>
 <div class="container-fluid full-screen">
     <div class="row full-screen">
-        
+
       <div class="container" style="margin-top:60px;">
             <!-- <a class="btn btn-default btn-block" href="{% url 'meals_list' %}">< Back</a> -->
             <div class="form-group">
               <label class="control-label" for="btndivs" > Select Camera</label>
               <select id="btndivs" class="form-control" onchange="changeCam();" >
                 <option value="null">--</option>
-              </select> 
+              </select>
             </div>
                 <div id="success" class="alert alert-success alert-dismissible fade in" style="display:none; background-color: #367a3a;">
                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -39,7 +39,7 @@
                   <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                   <strong>ERROR!</strong> <span id="deny"></span>
                 </div>
-                
+
                 <video id="preview" style="height: auto; width: 100%;"></video>
                 <!-- <div class="form-group">
                   <label class="control-label" for="company" > Scan Duration</label>
@@ -47,89 +47,97 @@
                   <span id="dtime">2000 ms</span>
                 </div> -->
                 <script>
-                    
+
                   let opts = {
                     // OPTIONS OF QR CODE SCANNER
                     // Leave this to true if you want to continiously scan qrs.. think so :)
                     continuous: true,
-                    
+
                     // The HTML element to use for the camera's video preview. Must be a <video> element.
                       // When the camera is active, this element will have the "active" CSS class, otherwise,
                       // it will have the "inactive" class. By default, an invisible element will be created to
                       // host the video.
                       video: document.getElementById('preview'),
-                      
+
                       // Whether to horizontally mirror the video preview. This is helpful when trying to
                       // scan a QR code with a user-facing camera. Default true.
                       mirror: true,
-                      
+
                       // Whether to include the scanned image data as part of the scan result. See the "scan" event
                       // for image format details. Default false.
                       captureImage: false,
-                      
+
                       // Only applies to continuous mode. Whether to actively scan when the tab is not active.
                       // When false, this reduces CPU usage when the tab is not active. Default true.
                       backgroundScan: true,
-                      
+
                       // Only applies to continuous mode. The period, in milliseconds, before the same QR code
                       // will be recognized in succession. Default 5000 (5 seconds).
                       refractoryPeriod: 5000,
-                      
+
                       // Only applies to continuous mode. The period, in rendered frames, between scans. A lower scan period
                       // increases CPU usage but makes scan response faster. Default 1 (i.e. analyze every frame).
                       scanPeriod: 1
                     };
                     let scanner = new Instascan.Scanner(opts);
-            
+
                     // When scanner detects a qr code, call this function
                     scanner.addListener('scan', function (content) {Scan(content);});
-                    
+
                     function Scan(content) {
-                    
+
                       // send data to api
                       SuperScan("{% url 'cool_meals_api' %}",content);
                       // get status code
-                      
-                      
+
+
                       }
 
-                      
-                     
-                    
+
+
+
                     Instascan.Camera.getCameras().then(function (cameras) {
                       if (cameras.length > 0) {
+                        let cameraId = localStorage.getItem("camera-id")
+                        if (cameraId === null) {
+                            cameraId = "0"
+                            localStorage.setItem("camera-id", cameraId)
+                        }
                         // For every camera available, craete an option at the select input.
                         for (let c = 0; c < cameras.length; c++) {
                             var option = document.createElement('option');
                             option.innerText = cameras[c].name;
                             option.value = c;
                             document.getElementById('btndivs').appendChild(option);
-                        } 
+                        }
+                        document.getElementById('btndivs').value = cameraId
+                        scanner.start(cameras[parseInt(cameraId)])
                       } else {
                         console.error('No cameras found.');
                       }
                     }).catch(function (e) {
                       console.error(e);
                     });
-                    
+
                     function changeCam(){
-                      // Function called everytime select input changes from value. 
+                      // Function called everytime select input changes from value.
                       // Used to start the scanner with the selected camera.
                       var x = document.getElementById('btndivs').value;
                       if(x != "null"){
                           Instascan.Camera.getCameras().then(function (cameras) {
                             scanner.stop();
+                            localStorage.setItem("camera-id", x.toString())
                             scanner.start(cameras[x]);
                           }).catch(function (e) {
                             console.error(e);
                           });
                         }
                     }
-                    // Change text value to display range value im ms 
+                    // Change text value to display range value im ms
                   //   document.getElementById("time").oninput = function() {
                   //     document.getElementById("dtime").innerHTML = this.value+" ms";
                   // }
-            
+
                   // Core function to send data to meals API
                     function SuperScan(theUrl, content)
                   {
@@ -138,7 +146,7 @@
                       url: theUrl,
                       data: {
                           csrfmiddlewaretoken: '{{ csrf_token }}',
-                          meal_id:'{{ meal.id }}', 
+                          meal_id:'{{ meal.id }}',
                           qr_id:content,
                         },
                       success: function (data, status, jqXHR) {
@@ -148,42 +156,42 @@
                           document.getElementById('success').style.display = "none";
                           document.getElementById('deny').innerHTML = "Something went wrong.";
                         }
-                        
+
                         if(data.success == true){ // 200 ok means can eat
                         // show success alert
-                        
+
                         // document.getElementById('success').style.display = "block";
                         $('#success').fadeOut("fast");
                         $('#success').fadeIn("fast");
                         // Display user's diet
-                        
+
                         // console.log(data.responseText.diet);
                         document.getElementById('succ').innerHTML = "User allowed to entry <br> Diet: <b>" + data.diet +"</b>";
                         // hide no pass alert
                         document.getElementById('no').style.display = "none";
-                        
-                      } else { // else, (may be 400). Has already eatern. 
-                        // hide success alert 
+
+                      } else { // else, (may be 400). Has already eatern.
+                        // hide success alert
                         document.getElementById('success').style.display = "none";
-                        
+
                         document.getElementById('deny').innerHTML = data.error;
                         // show no pass alert
                         $('#no').fadeOut("fast");
                         $('#no').fadeIn("fast");
                         // hide alert after time desired.
-                       
+
                       }
                       }
-                     
-                  
+
+
                     });
                   }
 
-                  
-                  
+
+
                    </script>
             </div>
-      
+
           </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
           <a class="btn btn-default btn-block" href="{% url 'meals_list' %}">< Back</a>
 </div>
