--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -192,8 +192,8 @@
                    </script>
             </div>
 
-          </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-          <a class="btn btn-default btn-block" href="{% url 'meals_list' %}">< Back</a>
+          </div>
+          <a class="btn btn-default btn-block" href="{% url back %}">< Back</a>
 </div>
 {% endblock %}
 
