--- a/applications/templates/application.html
+++ b/applications/templates/application.html
@@ -6,10 +6,15 @@
 {% block panel %}
 
 
-    {% if h_app_timeleft and application.can_be_edit %}
+    {% if app_type == 'H' and h_app_timeleft and application.can_be_edit %}
         <div class="alert alert-info" style="margin-left: 15px; margin-right: 15px">
             <p> Time until applications close: <strong
                     >{% include 'include/deadline_countdown.html' %}</strong></p>
+        </div>
+    {% elif app_type == 'V' and h_app_volunteer_timeleft and application.can_be_edit %}
+        <div class="alert alert-info" style="margin-left: 15px; margin-right: 15px">
+            <p> Time until applications close: <strong
+                    >{% include 'include/deadline_countdown.html' with timeleft=h_app_volunteer_timeleft %}</strong></p>
         </div>
     {% endif %}
     <div style="padding-left: 15px; padding-right: 15px">
