Started rework qr

--- a/baggage/templates/baggage_users.html
+++ b/baggage/templates/baggage_users.html
@@ -8,7 +8,7 @@
     <script src="{% static 'lib/typeahead.min.js' %}"></script>
     <script src="{% static 'js/form_modifiers.js' %}"></script>
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/scanner.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/scanner_old.js' %}"></script>
 {% endblock %}
 
 {% block head_title %}Baggage check-in{% endblock %}
