--- a/hardware/templates/hardware_admin.html
+++ b/hardware/templates/hardware_admin.html
@@ -5,7 +5,7 @@
     <script > window.CSRF_TOKEN = "{{ csrf_token }}"</script>
     <script src="{% static 'lib/typeahead.jquery.min.js' %}"></script>
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/scanner.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/scanner_old.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/hw.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/hw_admin.js' %}"></script>
 
