--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -276,43 +276,43 @@ img {
     margin-bottom: 1.5em;
 }
 
-#popup-scan {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
-    max-width: 600px;
-    padding: 15px;
-    text-align: center;
-    z-index: 1500;
-    background-color: #777777;
-    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    border: 0;
-}
+/*#popup-scan {*/
+/*    position: absolute;*/
+/*    top: 50px;*/
+/*    left: 50%;*/
+/*    transform: translateX(-50%);*/
+/*    width: 90%;*/
+/*    max-width: 600px;*/
+/*    padding: 15px;*/
+/*    text-align: center;*/
+/*    z-index: 1500;*/
+/*    background-color: #777777;*/
+/*    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+/*    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+/*    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+/*    -webkit-border-radius: 0;*/
+/*    -moz-border-radius: 0;*/
+/*    border-radius: 0;*/
+/*    border: 0;*/
+/*}*/
 
-#popup-scan video {
-    width: 100%;
-    margin: 0 auto;
-}
+/*#popup-scan video {*/
+/*    width: 100%;*/
+/*    margin: 0 auto;*/
+/*}*/
 
-.veil {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1250;
-    background-color:rgba(30,30,30,0.9);
-    backdrop-filter: blur(2px);
-    cursor: pointer;
-}
+/*.veil {*/
+/*    display: block;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    z-index: 1250;*/
+/*    background-color:rgba(30,30,30,0.9);*/
+/*    backdrop-filter: blur(2px);*/
+/*    cursor: pointer;*/
+/*}*/
 
 hr {
     margin-top: 0px;
@@ -446,4 +446,49 @@ input:-webkit-autofill
     background-color: #555555 !important;
     border-color: transparent;
     color: inherit;
+}
+
+#popup-scan {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 1251;
+}
+
+.scan-region-highlight {
+    border-radius: 30px;
+    outline: rgba(0, 0, 0, .25) solid 50vmax;
+}
+
+.scan-region-highlight-svg {
+    display: none;
+}
+
+.veil {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1250;
+    background-color:rgba(30,30,30,0.9);
+    backdrop-filter: blur(2px);
+    cursor: pointer;
+}
+
+.bg-dark {
+   background-color: rgba(30,30,30,1);
+}
+@media (max-width: 992px) {
+    #popup-scan > div {
+        height: 100%;
+    }
+}
+.justify-content-center {
+    justify-content: center!important;
+    display: flex;
 }
