--- a/baggage/templates/baggage_add.html
+++ b/baggage/templates/baggage_add.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/baggage.css' %}">
     {% if h_b_picture %}
         <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-        <script type="text/javascript" src="{% static 'js/scanner.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/scanner_old.js' %}"></script>
     {% endif %}
     <script src="{% static 'lib/typeahead.min.js' %}"></script>
     <script src="{% static 'js/form_modifiers.js' %}"></script>
