--- a/meals/templates/meals_users.html
+++ b/meals/templates/meals_users.html
@@ -5,7 +5,7 @@
 
 {% block extra_head %}
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/scanner.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/scanner_old.js' %}"></script>
 {% endblock %}
 
 {% block head_title %}Users list{% endblock %}
