--- a/baggage/templates/baggage_users.html
+++ b/baggage/templates/baggage_users.html
@@ -2,22 +2,54 @@
 
 {% load static %}
 {% load bootstrap3 %}
+{% load i18n %}
 
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'css/baggage.css' %}">
     <script src="{% static 'lib/typeahead.min.js' %}"></script>
     <script src="{% static 'js/form_modifiers.js' %}"></script>
-    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/scanner_old.js' %}"></script>
+    {% include 'include/import_qr_scanner.html' %}
 {% endblock %}
 
 {% block head_title %}Baggage check-in{% endblock %}
 
 {% block panel %}
-    <div id="baggage-container">
+
         <form id="baggage-search" action="" method="get" class="form text-left filter">
-            {% include 'include/input.html' with type='qr' desc='Search' name='search' id='id_search' %}
-            <button type="submit" class="btn btn-info">Filter</button>
+          <div style="display: flex">
+            <div style="width: 100%; margin-right: 10px" >
+                {% include 'include/input.html' with desc='Search' name='search' id='id_search' %}
+            </div>
+            <div class="ms-2">
+                <button type="button" id="qr_button" class="btn btn-primary" style="margin-top: 26.425px;"><i class="fa fa-qrcode"></i></button>
+            </div>
+        </div>
         </form>
-    </div>
+
+{% endblock %}
+
+{% block body_plain %}
+    {{ block.super }}
+    <video id="qr-video" style="width: 100%; height: 100%; display: none"></video>
+
+    <script nonce="{{ request.csp_nonce }}">
+        $(document).ready(() => {
+            let qr_button = $('#qr_button')
+            qr_button.css('margin-top', `${$('label[for="qr_code"]').outerHeight(true)}px`)
+
+            let scanner = new Scanner('qr-video', (content) => {
+                if (content.data) {
+                    $('input[name="qr_code"]').val(content.data)
+                    scanner.hide()
+                    $('#button-rescan').show()
+                }
+            }, {
+                popup: true,
+                popup_title: '{% translate 'QR scanner' %}',
+                popup_class: 'bg-dark',
+            })
+
+            qr_button.on('click', () => {scanner.show()})
+        })
+    </script>
 {% endblock %}
