--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -8,7 +8,7 @@
     <title>{{ subject }}</title>
     <style type="text/css">
 	a {
-	    color: #c3aff1;
+	    color: #1e53a2;
 	    text-decoration: none;
 	    -webkit-transition: all .1s linear;
 	    -moz-transition: all .1s linear;
@@ -17,7 +17,7 @@
 	}
 
 	a:hover, a:active, a:focus {
-	    color: #8a69d4;
+	    color: #1a488c;
 	    text-decoration: none;
 	}
 
@@ -75,8 +75,7 @@
             font-family: sans-serif;
             font-size: 14px;
             font-weight: normal;
-            margin: 0;
-            Margin-bottom: 15px;
+            margin: 0 0 15px;
         }
 
         @media all {
@@ -103,20 +102,20 @@
             }
 
             .btn-primary table td:hover {
-                background-color: #8a69d4 !important;
+                background-color: #1a488c !important;
             }
 
             .btn-primary a:hover {
-                background-color: #8a69d4 !important;
-                border-color: #8a69d4 !important;
+                background-color: #1a488c !important;
+                border-color: #1a488c !important;
             }
         }
     </style>
 </head>
 <body class=""
-      style="background-color:#111111;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+      style="background-color: white;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 <table border="0" cellpadding="0" cellspacing="0" class="body"
-       style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background-color:#111111;width:100%;">
+       style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background-color:white;width:100%;">
     <tr>
         <td style="font-family:sans-serif;font-size:14px;vertical-align:top;">&nbsp;</td>
         <td class="container"
@@ -135,7 +134,7 @@
                     {% endblock %}</span>
                 {% block main %}
                     <table class="main"
-                           style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;border-radius:3px;width:100%;background-color: #222222; color: #EEEEEE">
+                           style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;border-radius:3px;width:100%;background-color: white; color: black">
                         <!-- START MAIN CONTENT AREA -->
                         <tr>
                             <td class="wrapper"
@@ -187,7 +186,7 @@
                                                     <a role="social-icon-link"
                                                        href="https://medium.com/@{{ h_me }}"
                                                        target="_blank" border="0" alt="Medium" title="Medium"
-                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
+                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: black; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
                                                         <img role="social-icon" alt="Medium" title="Medium"
                                                              border="0"
                                                              height="20" width="20"
@@ -202,7 +201,7 @@
                                                     <a role="social-icon-link"
                                                        href="https://instagram.com/{{ h_ig }}"
                                                        target="_blank" border="0" alt="Instagram" title="Instagram"
-                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
+                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: black; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
                                                         <img role="social-icon" alt="Instagram" title="Instagram"
                                                              border="0"
                                                              height="20" width="20"
@@ -217,7 +216,7 @@
                                                     <a role="social-icon-link"
                                                        href="http://www.facebook.com/{{ h_fb }}"
                                                        target="_blank" border="0" alt="Facebook" title="Facebook"
-                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
+                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: black; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
                                                         <img role="social-icon" alt="Facebook" title="Facebook"
                                                              border="0"
                                                              height="20" width="20"
@@ -232,7 +231,7 @@
                                                     <a role="social-icon-link"
                                                        href="https://youtube.com/channel/{{ h_yt }}"
                                                        target="_blank" border="0" alt="YouTube" title="YouTube"
-                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
+                                                       style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: black; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
                                                         <img role="social-icon" alt="YouTube" title="YouTube"
                                                              border="0"
                                                              height="20" width="20"
@@ -248,7 +247,7 @@
                                                                                  target="_blank" border="0"
                                                                                  alt="Twitter"
                                                                                  title="Twitter"
-                                                                                 style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: white; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
+                                                                                 style="border-radius: 5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; -o-border-radius:5px; color: black; display: inline-block; outline: none; text-decoration:none; border: none; font-family: Helvetica, arial, sans-serif;">
                                                     <img role="social-icon" alt="Twitter" title="Twitter" border="0"
                                                          height="20" width="20"
                                                          style="height: 20px; width: 20px; border:none; font-family: Helvetica, arial, sans-serif;"
