--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -3,12 +3,37 @@
     src: url(../fonts/ProximaNovaRegular.ttf);
 }
 
+.bg {
+    overflow: hidden;
+    --voronoi-cell-colors: white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, white, #fcd4ae, #f8bcad, #b2ac79;
+    --voronoi-number-of-cells: 1000;
+    --voronoi-line-color: #e8e2d7;
+    --voronoi-line-width: 5;
+    --voronoi-dot-color: white;
+    --voronoi-dot-size:0;
+    background: paint(voronoi);
+}
+@media (max-width: 992px) {
+    .bg {
+        --voronoi-number-of-cells: 200;
+        background: paint(voronoi);
+    }
+    .content.container {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+.content.container {
+    padding: 0;
+}
+
 body {
-    background-image: url("../img/background.png");
-    background-position: center center;
-    background-attachment: fixed;
-    /*background: linear-gradient(#26ADB5 0%, #1DA3AD 33%, #1597A3 67%, #0E8C99 100%) no-repeat center center fixed;*/
-    background-repeat: repeat repeat;
+
+    /*background-image: url("../img/background.png");*/
+    /*background-position: center center;*/
+    /*background-attachment: fixed;*/
+    /*!*background: linear-gradient(#26ADB5 0%, #1DA3AD 33%, #1597A3 67%, #0E8C99 100%) no-repeat center center fixed;*!*/
+    /*background-repeat: repeat repeat;*/
     font-family: ProximaNovaRegular, 'Roboto', sans-serif;
     font-size: 15px;
 }
@@ -20,7 +45,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 105px;
+    /*margin-bottom: 105px;*/
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -55,12 +80,13 @@ a:hover, a:active, a:focus {
 
     width: 100%;
     /* Set the fixed height of the footer here */
-    background-color: #17141e;
-    border-color: #333333;
+    background-color: white;
 
-    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    /*-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);*/
+    /*-moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);*/
+    /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);*/
+    border: 0;
+    border-top: 5px solid #e8e2d7;
 }
 
 .btn-primary {
@@ -95,9 +121,11 @@ footer .row {
 }
 
 nav.navbar {
-    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /*-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+    /*-moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+    /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+    border: 0;
+    border-bottom: 5px solid #e8e2d7;
 }
 
 .table {
@@ -105,11 +133,10 @@ nav.navbar {
 }
 
 div.panel {
-
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    border: 0;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: 5px solid #e8e2d7;
     z-index: 3;
 }
 
@@ -248,17 +275,17 @@ img {
     padding: 0.5em 1em;
     text-align: center;
     transition: bottom 1s;
-    background-color:#8a69d4;
+    background-color: #e8e2d7;
     z-index:1031; /*footer was set to 1030*/
     box-shadow: 0px 15px 15px 15px black;
-    color:white;
+    color: black;
 }
 
 #cookie-notice div{
     width: 100px;
     padding: 5px 10px;
     margin: 0.5em auto;
-    background-color:#202326;
+    background-color: #1e53a2;
     cursor: pointer;
 
 }
@@ -331,7 +358,7 @@ hr {
     }
     .navbar-collapse {
         border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        /*box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);*/
     }
     .navbar-fixed-top {
         top: 0;
