Fixed color on 40x, 50x errors

--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -7,11 +7,11 @@
 
 {% block body %}
     <style>
-        .text-white {
-            color: white;
+        .text-black {
+            color: black;
         }
     </style>
-    <div class="text-white">
+    <div class="text-black">
         <h1 class="text-center margin-top">YOU SHALL NOT PASS!</h1>
         <h2 class="text-center">403 Access Forbidden</h2>
         <p class="text-center">Please <a href="{% url 'account_login' %}">log in</a> with a more <b>powerful</b> account to access this page</p>
