--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -7,11 +7,11 @@
 
 {% block body %}
     <style>
-        .text-white {
-            color: white;
+        .text-black {
+            color: black;
         }
     </style>
-    <div class="text-white">
+    <div class="text-black">
         <h1 class="text-center margin-top">¯\_(ツ)_/¯</h1>
         <h2 class="text-center">404 Page not found</h2>
         <p class="text-center">This specified file was not found on this website. Please check the URL for mistakes and
