--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -8,11 +8,11 @@
 
 {% block body %}
     <style>
-        .text-white {
-            color: white;
+        .text-black {
+            color: black;
         }
     </style>
-    <div class="text-white">
+    <div class="text-black">
         <h1 class="text-center margin-top">500 Oops</h1>
         <h2 class="text-center">Server Error </h2>
         <p class="text-center">It seems like you found an error. Please reach us out
